Fix spacing issue on tablet layout of index.html

--- a/css/index.css
+++ b/css/index.css
@@ -384,7 +384,7 @@ footer {
 
   .middle-img {
     margin: 4vw 2.5vw 0;
-    width: 95vw;
+    width: 93vw;
   }
 
   .section-two {
@@ -430,6 +430,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
   .header-image {
     display: flex;
@@ -445,6 +446,13 @@ footer {
     margin-left: 20vw;
     margin-top: 8vw;
     font-size: 7.2vw;
+  }
+
+  header .header-title a {
+    padding: 0.59vw 4.4vw;
+    margin-right: 0.5vw;
+    margin-top: 0.3vw;
+    font-size: 1.7vw;
   }
 }
 
